tests/ui/error-codes/E0264.stderr
error[E0718]: `copy` lang item must be applied to a trait
  --> $DIR/E0264.rs:4:5
   |
LL |     #[lang = "copy"]
   |     ^^^^^^^^^^^^^^^^ attribute should be applied to a trait, not a function

error[E0264]: unknown external lang item: `copy`
  --> $DIR/E0264.rs:5:5
   |
LL |     fn copy();
   |     ^^^^^^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0264, E0718.
For more information about an error, try `rustc --explain E0264`.
