tests/ui/error-codes/E0264.rs
#![feature(lang_items)]

extern "C" {
    #[lang = "copy"] //~ ERROR E0718
    fn copy(); //~ ERROR E0264
}

fn main() {}
